29/1/16 started 8.3
- add vips_reduce*() ... a fast path for bicubic downsize
- vips_resize() and vips_similarity() use it when they can
- bicubic is better on 32-bit int images
- add pdfload, svgload, gifload for PDF, SVG and GIF rendering 
- vipsthumbnail knows about pdfload and svgload

27/1/16 started 8.2.3
- fix a crash with SPARC byte-order labq vips images

12/1/16 started 8.2.2
- changes to ease compiling C++ binding with MSVC [Lovell Fuller]
- reorder file tests to put slow loaders last
- ifthenelse needs less C stack during eval
- better rounding in bilinear interpolator
- fix to "make check" in non-C locales [felixbuenemann]
- use compiler builtins isnan, isinf, fabs, fmin, fmax, ceil, floor when 
  possible [Lovell Fuller]
- tune vips_shrinkh(), 30% faster [Lovell Fuller]
- remove SEQ hint from vips_subsample(), fixes cli performance [erdmann]
- fix double free on attach ICC profile from file in tiff write [erdmann]
- use g_assert_not_reached() 
- better vips-from-C docs
- remove Duff from im_conv() / im_conv_f() for a 25% speedup [Lovell Fuller]

1/1/16 started 8.2.1
- add a compat stub [Benjamin Gilbert]
- python bandjoin is now just an instance function
- small doc improvements
- small vips7 C++ improvement
- remove exception specifications from vips8 C++ interface [Lovell Fuller]
- VImage::get_typeof() now returns GType

7/10/15 started 8.2.0
- added im_bufmagick2vips(), a vips7 wrapper for magick load from buffer
- fetch unset property now returns default value rather than warning
- many more const declarations to help gobject-introspection
- rewritten vips_shrink() is 2x faster, much lower memuse, now handles complex
- old code still there as vips_shrink2() for testing
- only allow [] for filename options
- add memory.h to Python API .. makes tracked highwater visible
- added bandjoin_const to add constant bands to an image
- better alpha handling for tiff write, thanks sadaqatullahn
- better cache sizing for vips_resize()